--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="presentacion">
                 <p class="bienvenida">Bienvenidos</p>
                 <h2>Soy <span>Jordan Quispe</span>, Desarrollador Web</h2>
-                <p class="descripcion">Program out of passion, not out of obligation </p>
+                <p class="descripcion">Programa por pasión, no por obligación </p>
                 <a href="#portfolio">Ir a Portafolio</a>
             </div>
         </div>
