--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- SECCION S O B R E M I -->
     <section id="sobremi">
         <div class="contenedor-foto">
-            <img src="#" alt="">
+            <img src="foto.png" alt="">
         </div>
         <div class="sobremi">
             <p class="titulo-seccion">Sobre Mi</p>
